[software] Adding com port selector

--- a/software/win/hp8753a.vcxproj
+++ b/software/win/hp8753a.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClInclude Include="basewin.h" />
     <ClInclude Include="canvas.h" />
+    <ClInclude Include="commthread.h" />
     <ClInclude Include="hp1349renderer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
